--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
   <div id="links">
     <a class="link" href="https://g.page/150coffeegarden?share" target="_blank">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.8478109732337!2d107.6473399147728!3d-6.908794495007964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7eb0713d7e3%3A0x1bce438fe7ce32b7!2s150%20Coffee%20and%20Garden!5e0!3m2!1sid!2sid!4v1613463496075!5m2!1sid!2sid" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1013947.6248049678!2d106.3723296240072!3d-6.92249827546482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68d17cdbc14893%3A0xd50c5b8244ca33b7!2sMaja%20Koffie!5e0!3m2!1sid!2sid!4v1671286597189!5m2!1sid!2sid" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </a>
   </div>
 
