--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                                 <div class="cases_slider-slide splide__slide">
                                     <div class="media">
                                         <picture>
-                                            <source data-srcset="img/w1.jpg" srcset="img/w1.jpg" type="image/webp" />
-                                            <img class="lazy" data-src="img/w1.jpg" src="img/w1.jpg" alt="Meja outdoor dengan payung di atasnya, dihiasi dengan gelas-gelas kopi dan makanan lezat." />
+                                            <source data-srcset="img/campaign1.webp" srcset="img/campaign1.webp" type="image/webp" />
+                                            <img class="lazy" data-src="img/campaign1.webp" src="img/campaign1.webp" alt="Meja outdoor dengan payung di atasnya, dihiasi dengan gelas-gelas kopi dan makanan lezat." />
                                         </picture>
                                     </div>
                                 </div>
@@ -102,8 +102,8 @@
                                             <picture>
                                                 <img
                                                     class="lazy"
-                                                    data-src="img/w2.jpg"
-                                                    src="img/w2.jpg"
+                                                    data-src="img/campaign2.webp"
+                                                    src="img/campaign2.webp"
                                                     alt="Suasana asri Maja Koffie dengan meja kayu dan pohon-pohon hijau di sekitarnya"
                                                 />
                                             </picture>
@@ -116,8 +116,8 @@
                                             <picture>
                                                 <img
                                                     class="lazy"
-                                                    data-src="img/w3.jpg"
-                                                    src="img/w3.jpg"
+                                                    data-src="img/campaign3.webp"
+                                                    src="img/campaign3.webp"
                                                     alt="Suasana asri Maja Koffie dengan meja kayu dan pohon-pohon hijau di sekitarnya."
                                                 />
                                             </picture>
@@ -130,29 +130,14 @@
                                             <picture>
                                                 <img
                                                     class="lazy"
-                                                    data-src="img/w4.jpg"
-                                                    src="img/w4.jpg"
+                                                    data-src="img/campaign4.webp"
+                                                    src="img/campaign4.webp"
                                                     alt="Suasana asri Maja Koffie dengan meja kayu dan pohon-pohon hijau di sekitarnya."
                                                 />
                                             </picture>
                                         </a>
                                     </div>
                                 </div>
-                                <div class="cases_slider-slide splide__slide">
-                                    <div class="media">
-                                        <a class="link" href="#">
-                                            <picture>
-                                                <img
-                                                    class="lazy"
-                                                    data-src="img/w5.jpg"
-                                                    src="img/w5.jpg"
-                                                    alt="Maja Koffie Sumedang"
-                                                />
-                                            </picture>
-                                        </a>
-                                    </div>
-                                </div>
-                                
                                  <!--  <div class="cases_slider-slide splide__slide">
                                     <div class="media">
                                         <a class="link" href="#">
