--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="cases_slider splide">
                         <div class="splide__track">
                             <div class="splide__list">
-                                <div class="cases_slider-slide splide__slide">
+                                <!-- <div class="cases_slider-slide splide__slide">
                                     <div class="media">
                                         <picture>
                                             <source data-srcset="img/campaign1.webp" srcset="img/campaign1.webp" type="image/webp" />
@@ -136,8 +136,37 @@
                                                 />
                                             </picture>
                                         </a>
+                                    </div> -->
+
+                                    <div class="cases_slider-slide splide__slide">
+                                    <div class="media">
+                                        <a class="link" href="#">
+                                            <picture>
+                                                <img
+                                                    class="lazy"
+                                                    data-src="img/anniversay1.webp"
+                                                    src="img/anniversay1.webp"
+                                                    alt="Suasana asri Maja Koffie dengan meja kayu dan pohon-pohon hijau di sekitarnya."
+                                                />
+                                            </picture>
+                                        </a>
                                     </div>
-                                </div>
+                                    </div>
+                                    <div class="cases_slider-slide splide__slide">
+                                        <div class="media">
+                                            <a class="link" href="#">
+                                                <picture>
+                                                    <img
+                                                        class="lazy"
+                                                        data-src="img/anniversay2.webp"
+                                                        src="img/anniversay2.webp"
+                                                        alt="Suasana asri Maja Koffie dengan meja kayu dan pohon-pohon hijau di sekitarnya."
+                                                    />
+                                                </picture>
+                                            </a>
+                                        </div>
+                                        </div>
+                            </div>
                                  <!--  <div class="cases_slider-slide splide__slide">
                                     <div class="media">
                                         <a class="link" href="#">
@@ -182,9 +211,9 @@
                     <div class="cta_media">
                         <div class="cta_media-item cta_media-item--main">
                             <video autoplay loop muted playsinline>
-                                <source src="video/majakoffie.ogv" type='video/ogv; codecs="theora, vorbis"' />
-                                <source src="video/majakoffie.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
-                                <source src="video/majakoffie.webm" type='video/webm; codecs="vp8, vorbis"' />
+                                <source src="video/anniversary.ogv" type='video/ogv; codecs="theora, vorbis"' />
+                                <source src="video/anniversary.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+                                <source src="video/anniversary.webm" type='video/webm; codecs="vp8, vorbis"' />
                             </video>
                         </div>
                         <div class="cta_media-item cta_media-item--secondary laxY" data-aos="fade-in">
@@ -208,6 +237,7 @@
                             <span class="accent linebreak" style="color: #8c2319;">Yang Kamu Butuhin ada Disini...</span>
                         </h2>
                         <div class="cta_main-action">
+                            <a class="btn btn--accent btn--arrow" style="border-radius: 30px; color: #ffffff;" target="_blank" href="https://api.whatsapp.com/send?phone=6281333345030&text=Halo+min%2C+mau+daftar+CUP+Tester+MAJA+KOFFIE+dong%21">DAFTAR Cup Tester di MAJA Koffie <i class="icon icon-arrow-right"></i></a>
                             <a class="btn btn--accent btn--arrow" style="border-radius: 30px; color: #ffffff;" target="_blank" href="https://drive.google.com/drive/folders/1pKeWYlJEcKHJVIb-ZXwgGNbka9PP47Pg?usp=share_link">DAFTAR MENU <i class="icon icon-arrow-right"></i></a>
                             <a class="btn btn--accent btn--arrow" style="border-radius: 30px; color: #ffffff;"  target="_blank" href="https://api.whatsapp.com/send?phone=6281333345030&text=Halo%20Maja%20Koffie">Reservasi <i class="icon icon-arrow-right"></i></a>
                             <a class="btn btn--accent btn--arrow" style="border-radius: 30px; color: #ffffff;"  target="_blank" href="https://goo.gl/maps/nWCJfH3yxgHKz2n6A">Lokasi MAJA KOFFIE <i class="icon icon-arrow-right"></i></a>
