--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <div class="container">
                     <br>
                     <img style="width: 20%;" src="img/textredlogo.png" alt="MajaKoffie" />
-                    <div class="section_nav">
-                        <!-- <h3 class="section_nav-title" style="color: #8c2319;">
+                    <!--  <div class="section_nav">
+                        <h3 class="section_nav-title" style="color: #8c2319;">
                             Menu Favorit?
-                        </h3> -->
+                        </h3>
                         <div class="section_nav-controls" style="color: #8c2319;">
                             <span class="divider" style="background-color: #8c2319;"></span>
                             <div class="section_nav-controls_btns">
@@ -77,8 +77,8 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
-                    <div class="cases_slider splide">
+                    </div> -->
+                    <!--  <div class="cases_slider splide">
                         <div class="splide__track">
                             <div class="splide__list">
                                 <div class="cases_slider-slide splide__slide">
@@ -161,7 +161,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!--  <div class="cases_slider splide">
                         <div class="splide__track">
                             <div class="splide__list">
